tests/ui/invalid_pyfunction_argument.default.stderr
error[E0277]: `Atomic<*mut ()>` cannot be used as a Python function argument
   --> tests/ui/invalid_pyfunction_argument.rs:9:37
    |
  9 | fn invalid_pyfunction_argument(arg: AtomicPtr<()>) {
    |                                     ^^^^^^^^^ the trait `FromPyObject<'_, '_>` is not implemented for `Atomic<*mut ()>`
    |
    = note: implement `FromPyObject` to enable using `Atomic<*mut ()>` as a function argument
    = note: `Python<'py>` is also a valid argument type to pass the Python token into `#[pyfunction]`s and `#[pymethods]`
    = help: the following other types implement trait `FromPyObject<'a, 'py>`:
              `&'a CStr` implements `FromPyObject<'a, '_>`
              `&'a [u8]` implements `FromPyObject<'a, 'py>`
              `&'a str` implements `FromPyObject<'a, '_>`
              `(T0, T1)` implements `FromPyObject<'a, 'py>`
              `(T0, T1, T2)` implements `FromPyObject<'a, 'py>`
              `(T0, T1, T2, T3)` implements `FromPyObject<'a, 'py>`
              `(T0, T1, T2, T3, T4)` implements `FromPyObject<'a, 'py>`
              `(T0, T1, T2, T3, T4, T5)` implements `FromPyObject<'a, 'py>`
            and $N others
    = note: required for `Atomic<*mut ()>` to implement `pyo3::impl_::extract_argument::PyFunctionArgument<'_, '_, '_, true>`
note: required by a bound in `pyo3::impl_::extract_argument::extract_required_argument`
 --> src/impl_/extract_argument.rs
  |
  | pub fn extract_required_argument<'a, 'holder, 'py, T, const IMPLEMENTS_FROMPYOBJECT: bool>(
  |        ------------------------- required by a bound in this function
...
  |     T: PyFunctionArgument<'a, 'holder, 'py, IMPLEMENTS_FROMPYOBJECT>,
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `extract_required_argument`

error[E0277]: `Foo` cannot be used as a Python function argument
   --> tests/ui/invalid_pyfunction_argument.rs:20:40
    |
 20 | fn pyclass_without_from_py_object(arg: Foo) {
    |                                        ^^^ unsatisfied trait bound
    |
help: the trait `FromPyObject<'_, '_>` is not implemented for `Foo`
   --> tests/ui/invalid_pyfunction_argument.rs:17:1
    |
 17 | struct Foo;
    | ^^^^^^^^^^
    = note: implement `FromPyObject` to enable using `Foo` as a function argument
    = note: `Python<'py>` is also a valid argument type to pass the Python token into `#[pyfunction]`s and `#[pymethods]`
    = help: the following other types implement trait `FromPyObject<'a, 'py>`:
              `&'a CStr` implements `FromPyObject<'a, '_>`
              `&'a [u8]` implements `FromPyObject<'a, 'py>`
              `&'a str` implements `FromPyObject<'a, '_>`
              `(T0, T1)` implements `FromPyObject<'a, 'py>`
              `(T0, T1, T2)` implements `FromPyObject<'a, 'py>`
              `(T0, T1, T2, T3)` implements `FromPyObject<'a, 'py>`
              `(T0, T1, T2, T3, T4)` implements `FromPyObject<'a, 'py>`
              `(T0, T1, T2, T3, T4, T5)` implements `FromPyObject<'a, 'py>`
            and $N others
    = note: required for `Foo` to implement `pyo3::impl_::extract_argument::PyFunctionArgument<'_, '_, '_, true>`
note: required by a bound in `pyo3::impl_::extract_argument::extract_required_argument`
 --> src/impl_/extract_argument.rs
  |
  | pub fn extract_required_argument<'a, 'holder, 'py, T, const IMPLEMENTS_FROMPYOBJECT: bool>(
  |        ------------------------- required by a bound in this function
...
  |     T: PyFunctionArgument<'a, 'holder, 'py, IMPLEMENTS_FROMPYOBJECT>,
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `extract_required_argument`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
